--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -3,6 +3,7 @@
     color: white;
     font-size: 20px;
     padding: 10px 40px;
+    margin: auto;
     max-width: 200px;
     height: 60px;
     border: none;
