--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -11,9 +11,8 @@
 }
 
 .modal {
-    background: white;
-    padding: 10px;
-    border-radius: 8px;
+    background: none;
+    padding: 0;
     position: relative;
     width: auto;
     max-width: 90%;
@@ -26,5 +25,5 @@
 .image {
     max-width: 100%;
     max-height: 80vh;
-    object-fit: contain;
+    object-fit: cover;
 }
